--- a/login.html
+++ b/login.html
@@ -1,6 +1,6 @@
 <h2>Please Login</h2>
 <hr>
-<from>
+<from action="welcome.html">
   <h3>
     Username <input type="text"<br>
     Password <input type="password"><br>
@@ -10,3 +10,4 @@
   </h3>
 </from>
 <hr>
+<h4>THANK YOU</h4>
