--- a/login.html
+++ b/login.html
@@ -1,13 +1,13 @@
 <h2>Please Login</h2>
 <hr>
-<from action="welcome.html">
+<form>
   <h3>
-    Username <input type="text"<br>
+    Username <input type="text"><br>
     Password <input type="password"><br>
     <br>
     <input type="submit" value="LOGIN">
     <input type="reset" value="RESET">
   </h3>
-</from>
+</form>
 <hr>
 <h4>THANK YOU</h4>
