--- a/login.html
+++ b/login.html
@@ -3,10 +3,11 @@
 <form>
   <h3>
     Username <input type="text"><br>
-    Password <input type="password"><br>
+    Password <input type="password" name="pwd"><br>
     <br>
     <input type="submit" value="LOGIN">
     <input type="reset" value="RESET">
+    <input type="button" value="GREET">
   </h3>
 </form>
 <hr>
