--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <br>
     <input type="submit" value="LOGIN">
     <input type="reset" value="RESET">
-    <input type="button" value="GREET">
+    <input type="button" value="GREET" onClick="alert('GOOD MORNING')">
   </h3>
 </form>
 <hr>
