--- a/login.html
+++ b/login.html
@@ -3,11 +3,11 @@
 <form action="welcome.html">
   <h3>
     Username <input type="text"><br>
-    Password <input type="password" name="pwd"><br>
+    Secret Code <input type="password" name="pwd"><br>
     <br>
     <input type="submit" value="LOGIN">
-    <input type="reset" value="RESET">
-    <input type="button" value="GREET" onClick="alert('GOOD MORNING')">
+    <input type="reset" value="CLEAR">
+    
   </h3>
 </form>
 <hr>
